--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "npx nodemon index.js"
   },
   "repository": {
     "type": "git",
@@ -18,6 +19,7 @@
   "homepage": "https://github.com/NejoBMG/backendFundamentals#readme",
   "dependencies": {
     "express": "^4.18.1",
+    "multer": "^1.4.5-lts.1",
     "nodemon": "^2.0.19"
   }
 }
